--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <tr>
         <td>
           <input type="button" id="ulozit" name="submit" value="ODOSLAŤ" onclick="myCreateTable()" />
+          <input type="button" id="store" name="storage" value="ULOZIT" onclick="storeData(meno,priezvisko,date,pohlavie)"/>
           <input type="button" id="nacitat" name="loader" value="NAČÍTAŤ"/>
         </td>
       </tr>
